Fixed ResourceCard alignment - still work in progress

--- a/app/shared/resource-compact-list/_resource-compact-list.scss
+++ b/app/shared/resource-compact-list/_resource-compact-list.scss
@@ -5,7 +5,7 @@
   position: sticky; //fixed
   bottom: 100px;
   left: 0;
-  margin: 0 15px 0 15px;
+  margin: auto;
   padding: 0 8px 0 8px;
   width: 100%;
 
